--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "oas-helper",
+  "name": "api-spec-helper",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "cli.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,7 +10,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "arg": "^5.0.0",
-    "inquirer": "^7.3.3"
+    "arg": "^5.0.0"
   }
 }
