Add package data to package.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "api-spec-helper",
   "version": "0.1.0",
-  "description": "",
+  "description": "CLI tool to autogenerate swagger documents",
   "main": "src/api-spec-helper.js",
   "bin": {
     "api-spec-helper": "src/api-spec-helper.js"
@@ -9,9 +9,15 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": [
+    "swagger",
+    "oas3",
+    "REST API",
+    "documentation"
+  ],
+  "author": "Sanderson Barbosa <sandbar.dev@gmail.com>",
+  "repository":"github.com/sandobits/api-spec-helper",
+  "license": "MIT",
   "dependencies": {
     "arg": "^5.0.0"
   }
